# aws-baseline

./: .gitignore  404.html  LICENSE.md  Makefile  README.md  dynamodb-appautoscaling-iam-role.tf  dynamodb-appautoscaling-targets.tf  index.html  mkdocs.yml  pyproject.toml  variables.tf
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md
code/: index.html
docs/: code.md  goals.md  index.md  overview.md  spec.md  specs.md
docs/code/: index.md
docs/spec/: logging.md
docs/spec/cloudtrail/: index.md
docs/spec/config/: index.md
docs/spec/route53/: index.md
docs/spec/s3/: index.md
docs/spec/tagging/: index.md
overview/: index.html
search/: search_index.json
site/: sitemap.xml
site/goals/: index.html
site/spec/: index.html
site/spec/iam/policies/: index.html
site/spec/iam/roles/: index.html
site/spec/route53/: index.html
spec/cloudtrail/: index.html
spec/config/: index.html
spec/iam/access-analyzer/: index.html
spec/iam/permission-boundaries/: index.html
spec/infrastructure-as-code/terraform-remote-state/: index.html
spec/logging/: index.html
spec/s3/: index.html
spec/tagging/: index.html
terraform/modules/mono/: access_analyzer.tf  cloudtrail.tf  s3.tf
terraform/modules/terraform-state/: dynamodb-tables.tf
terraform/modules/terraform-state/dynamodb-appautoscaling/: main.tf
terraform/modules/terraform-state/dynamodb-kms-key/: main.tf  variables.tf  versions.tf
terraform/modules/terraform-state/dynamodb-table/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/terraform-state/s3-bucket/: README.md  (+4 more)
