[tool.poetry]
name = "aws-baseline"
version = "0.1.0"
description = "Baseline essentials for an AWS account: documented and codified"
authors = ["Tim O'Guin <timoguin@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
mkdocs = "^1.1"
mkdocs-versioning = "^0.1.0"
mkdocs-material = "^4.6.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
